--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-meow
+Hey!
+
+This is Mining Game, a small game made in Flixel by me, Ashkin.
+
+Feel free to use some of my code, although I don't see why you would want to (it's pretty awful.)
+
+Please leave a reply in my topic at http://forums.tigsource.com/index.php?topic=21469.0 if you use anything, have problems, or just want to make a comment on the game.
+
+Good luck!
